--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "fluent-ffmpeg": "^2.1.2",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "random-string": "^0.2.0",
@@ -18,6 +19,7 @@
     "react-dropzone": "^11.2.4",
     "react-native-ffmpeg": "^0.5.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
